concord_examples/tests/ui/cache_revalidate_requires_bool.stderr
error: expected `true` or `false` after `revalidate`
  --> tests/ui/cache_revalidate_requires_bool.rs:11:13
   |
11 |             }
   |             ^
